vlib/v/checker/tests/private_struct_return_autostr_err.vv
import v.checker.tests.amod

fn main() {
	a := amod.new_private_foo(1)
	dump(a)
}
